# FirstEspIdf

./: .gitignore  CMakeLists.txt  README.md  tdd.cmake
main/: blink.c
mock/: mock_gpio.c  mock_task.c
mock/driver/: gpio.h
mock/freertos/: FreeRTOS.h  task.h
test/: CMakeLists.txt  test_color.c  test_main.c
unity/: CMakeLists.txt  source-library.sh
